[gd_scene load_steps=35 format=3 uid="uid://cmt1jcefx4r77"]

[ext_resource type="Script" uid="uid://cu86thv0c6xg3" path="res://elements/enemy/toupeira/ai_enemy_toupeira.gd" id="1_k62jn"]
[ext_resource type="Script" uid="uid://b3g5atumyrird" path="res://systems/health/health.gd" id="2_2fglv"]
[ext_resource type="PackedScene" uid="uid://dhmi2sv2mhuqe" path="res://elements/enemy/projectiles/proj_basic/proj_enemy_basic.tscn" id="2_3052g"]
[ext_resource type="Script" uid="uid://hbsjipy3xak5" path="res://systems/pressable/pressable.gd" id="3_paykw"]
[ext_resource type="Script" uid="uid://dj2x7ekyg32b7" path="res://systems/score/score_giver.gd" id="4_xipap"]
[ext_resource type="Resource" uid="uid://dri1rv4h6bs4s" path="res://elements/score/score_info_toupeira_mole.tres" id="5_cwqxy"]
[ext_resource type="Script" uid="uid://bls4vce0lfvfc" path="res://elements/vfx/spawn_area.gd" id="5_ixwr1"]
[ext_resource type="PackedScene" uid="uid://em0s714jg74j" path="res://elements/enemy/toupeira/mesh/mesh_toupeira.tscn" id="5_juffn"]
[ext_resource type="PackedScene" uid="uid://breucom6nsp22" path="res://elements/enemy/toupeira/mesh/mesh_toupeira_door.tscn" id="6_5ioup"]
[ext_resource type="PackedScene" uid="uid://ywymskkj85vs" path="res://elements/vfx/vfx_explosion/vfx_explosion.tscn" id="6_k6xjf"]
[ext_resource type="PackedScene" uid="uid://chf2s4abcxjfj" path="res://elements/enemy/toupeira/mesh/mesh_toupeira_hole.tscn" id="7_t110g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6482x"]
size = Vector3(2, 1, 2)

[sub_resource type="Animation" id="Animation_1lsm2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/topeira_door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/topeira_door:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.0472, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/toupeira:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.12407, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphic/toupeira/toupeira:blend_shapes/slide_cannon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphic/toupeira/toupeira:blend_shapes/scale_cannon")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b6ehy"]
resource_name = "close_stop"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/topeira_door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/topeira_door:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.0472, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/toupeira:position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.12407, 0)]
}

[sub_resource type="Animation" id="Animation_yum7g"]
resource_name = "closing"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/topeira_door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/topeira_door:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333, 0.266667, 0.3, 0.366667, 0.4, 0.466667),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 0.5, 2, 0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.122173, 0, 0), Vector3(0, 0, 0), Vector3(1.0472, 0, 0), Vector3(0.872665, 0, 0.0296706), Vector3(1.0472, 0, 0), Vector3(1.0472, 0, 0.0872665), Vector3(1.0472, 0, -0.0872665), Vector3(1.0472, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/toupeira:position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333, 0.233333),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0), Vector3(0, -1.12407, 0)]
}

[sub_resource type="Animation" id="Animation_fd0g0"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/topeira_door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -0.85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/topeira_door:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.5),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector3(1.0472, 0, 0), Vector3(-0.122173, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/toupeira:position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.4),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector3(0, -1.12407, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1pt34"]
resource_name = "shooting"
length = 0.133337
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/topeira_door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/topeira_door:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/toupeira:position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphic/toupeira/toupeira:blend_shapes/slide_cannon")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, -1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphic/toupeira/toupeira:blend_shapes/scale_cannon")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_cp8e6"]
resource_name = "stop"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphic/topeira_door:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphic/topeira_door:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Graphic/toupeira:position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(2),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Graphic/toupeira/toupeira:blend_shapes/slide_cannon")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Graphic/toupeira/toupeira:blend_shapes/scale_cannon")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ihfs"]
_data = {
&"RESET": SubResource("Animation_1lsm2"),
&"close_stop": SubResource("Animation_b6ehy"),
&"closing": SubResource("Animation_yum7g"),
&"open": SubResource("Animation_fd0g0"),
&"shooting": SubResource("Animation_1pt34"),
&"stop": SubResource("Animation_cp8e6")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5tafn"]
animation = &"close_stop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_npvay"]
animation = &"closing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ytoc"]
animation = &"open"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_odjxe"]
animation = &"shooting"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aogvg"]
animation = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_153ux"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lreu6"]
advance_mode = 2
advance_expression = "shooting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8fq7p"]
advance_mode = 2
advance_expression = "!shooting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0txdr"]
advance_mode = 2
advance_expression = "!opened"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_eiwcu"]
advance_mode = 2
advance_expression = "opened"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y4t1t"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wicln"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lhh23"]
priority = 2
advance_mode = 2
advance_expression = "!opened"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_gbl5j"]
states/Start/position = Vector2(163, 100)
states/close_stop/node = SubResource("AnimationNodeAnimation_5tafn")
states/close_stop/position = Vector2(343, 107)
states/closing/node = SubResource("AnimationNodeAnimation_npvay")
states/closing/position = Vector2(504, 25)
states/open/node = SubResource("AnimationNodeAnimation_0ytoc")
states/open/position = Vector2(504, 215)
states/shooting/node = SubResource("AnimationNodeAnimation_odjxe")
states/shooting/position = Vector2(792, 25)
states/stop/node = SubResource("AnimationNodeAnimation_aogvg")
states/stop/position = Vector2(668, 107)
transitions = ["Start", "close_stop", SubResource("AnimationNodeStateMachineTransition_153ux"), "stop", "shooting", SubResource("AnimationNodeStateMachineTransition_lreu6"), "shooting", "stop", SubResource("AnimationNodeStateMachineTransition_8fq7p"), "stop", "closing", SubResource("AnimationNodeStateMachineTransition_0txdr"), "close_stop", "open", SubResource("AnimationNodeStateMachineTransition_eiwcu"), "open", "stop", SubResource("AnimationNodeStateMachineTransition_y4t1t"), "closing", "close_stop", SubResource("AnimationNodeStateMachineTransition_wicln"), "shooting", "closing", SubResource("AnimationNodeStateMachineTransition_lhh23")]

[sub_resource type="GDScript" id="GDScript_e66hc"]
script/source = "extends AnimationTree

var opened:bool;
var shooting:bool;
"

[node name="EnemyMole" type="Node3D"]
script = ExtResource("1_k62jn")
time_pre_shooting = 0.45
time_shooting = 1.8
time_post_shooting = 3.0
shot_interval = 0.065
proj = ExtResource("2_3052g")

[node name="Area3D" type="CharacterBody3D" parent="."]
collision_layer = 4
collision_mask = 30

[node name="Health" type="Node" parent="Area3D" node_paths=PackedStringArray("feedback") groups=["enemy_healths"]]
script = ExtResource("2_2fglv")
max_amount = 2.5
feedback = [NodePath("../../Graphic")]

[node name="ScoreGiver" type="Node" parent="Area3D" node_paths=PackedStringArray("health", "point_position")]
script = ExtResource("4_xipap")
info = ExtResource("5_cwqxy")
health = NodePath("../Health")
point_position = NodePath("..")
metadata/_custom_type_script = "uid://dj2x7ekyg32b7"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_6482x")

[node name="EnemyPosition" type="Node3D" parent="." groups=["enemy_position"]]

[node name="InstantiatePlace" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.75)

[node name="Pressable" type="Node3D" parent="."]
script = ExtResource("3_paykw")
pressable_tether_distance = 3.0
search_for_area_inside = true

[node name="Area3D" type="Area3D" parent="Pressable"]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pressable/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_6482x")

[node name="Graphic" type="Node3D" parent="."]

[node name="toupeira" parent="Graphic" instance=ExtResource("5_juffn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.12407, 0)

[node name="topeira_door" parent="Graphic" instance=ExtResource("6_5ioup")]
transform = Transform3D(1, 0, 0, 0, 0.499998, -0.866026, 0, 0.866026, 0.499998, 0, 0, -0.85)

[node name="topeira_hole" parent="Graphic" instance=ExtResource("7_t110g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.096108)

[node name="SpawnArea" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
aabb = AABB(-1, -0.5, -1, 2, 1, 2)
script = ExtResource("5_ixwr1")
scenes = Array[PackedScene]([ExtResource("6_k6xjf")])
spawn_multiple_default = 8
spawn_multiple_default_duration = 0.5
spawn_multiple_default_trans = 1

[node name="VisibleOnScreenEnabler3D" type="VisibleOnScreenEnabler3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
aabb = AABB(-1, -0.5, -1, 2, 1.5, 2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ihfs")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_gbl5j")
anim_player = NodePath("../AnimationPlayer")
script = SubResource("GDScript_e66hc")

[connection signal="dead" from="Area3D/Health" to="." method="_on_health_dead"]
[connection signal="pressed" from="Pressable" to="." method="_on_pressable_pressed"]
[connection signal="released" from="Pressable" to="." method="_on_pressable_released"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler3D" to="." method="_on_visible_on_screen_enabler_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler3D" to="." method="_on_visible_on_screen_enabler_3d_screen_exited"]

[editable path="Graphic/toupeira"]
